// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > binary in multipart/form-data request body > generates body type with binary field in multipart upload 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export interface FileInput {
  data: Blob;
  filename: string;
}

export type PostUploadBody = { file: FileInput; description?: string; };

export type PostUploadResponse = void;"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > binary in multipart/form-data request body > generates body type with multiple binary fields 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export interface FileInput {
  data: Blob;
  filename: string;
}

export type PostBatchUploadBody = { avatar: FileInput; document?: FileInput; thumbnail?: FileInput; name?: string; };

export type PostBatchUploadResponse = void;"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > binary in response content > generates string response type for binary content 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetFilesIdResponse = StreamResponse;"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > byte format in request body > generates body type with byte field for base64-encoded data 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostDataBody = { payload: string; };

export type PostDataResponse = void;"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > schema-level format > generates string type for format: binary 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type FileData = string;"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > schema-level format > generates string type for format: byte 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Base64Data = string;"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > schema-level format > generates string type for nullable binary format 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type OptionalFile = string | null;"
`;
